--- a/scss/_doctor.scss
+++ b/scss/_doctor.scss
@@ -64,6 +64,7 @@
 
 		&__name {
 			font-size: 1.4rem;
+			bottom: 3rem;
 		}
 	}
 }
@@ -86,7 +87,7 @@
 			content: "";
 			position: relative;
 			z-index: 2;
-			left: 50%;
+			left: calc(50% - 2.4rem / 2);
 			top: 14rem;
 			display: block;
 			width: 2.4rem;
