--- a/scss/_grid-section.scss
+++ b/scss/_grid-section.scss
@@ -36,7 +36,7 @@
 	padding: 0 0.5rem;
 	margin-bottom: 3rem;
 
-	& > div:hover {
+	& > a:hover {
 		box-shadow: 0 0 5px 5px #c9ab63;
 		transform: translateY(-3px);
 	}
